--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: portfolio_web_app
 description: "A new Flutter project."
 publish_to: "none"
-version: 0.1.0
+version: 1.0.0+1
 
 environment:
   sdk: ">=3.4.4 <4.0.0"
@@ -10,6 +10,7 @@ dependencies:
   auto_size_text: ^3.0.0
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.8
   flutter_bloc: ^8.1.6
   get_it: ^8.0.0
   go_router: ^14.2.8
@@ -22,6 +23,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.14.1
 
 flutter:
   uses-material-design: true
@@ -31,3 +33,12 @@ flutter:
     - assets/images/projects/
     - assets/images/icons/
     - assets/animations/
+
+flutter_launcher_icons:
+  android: "ic_launcher"
+  ios: true
+  image_path: "assets/images/app_icon.png"
+  remove_alpha_ios: true
+  min_sdk_android: 24
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/images/app_icon.png" # For adaptive icons on Android
