--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   lottie: ^3.1.2
   url_launcher: ^6.3.0
   visibility_detector: ^0.4.0+2
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
